Fix foundIn section's spacing

--- a/src/sass/sections/_foundIn.scss
+++ b/src/sass/sections/_foundIn.scss
@@ -6,14 +6,21 @@
 }
 
 .logo-container {
-  margin-top: 12.8rem;
+  margin-top: 9.6rem;
 
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  // grid-template-columns: repeat(auto-fit, minmax(14.5rem, 1fr));
+  // display: grid;
+  // grid-template-columns: repeat(6, 1fr);
+  // // grid-template-columns: repeat(auto-fit, minmax(14.5rem, 1fr));
+  // align-items: center;
+  // justify-items: center;
+  // row-gap: 9.6rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 19.2rem;
+  row-gap: 9.6rem;
   align-items: center;
-  justify-items: center;
-  row-gap: 12.8rem;
+  justify-content: space-around;
 }
 
 .top {
